[gd_scene load_steps=9 format=1]

[ext_resource path="res://Scenes/Fondo/Mar.gd" type="Script" id=1]
[ext_resource path="res://Gfx/Fondo/harina mojada.png" type="Texture" id=2]
[ext_resource path="res://Gfx/Fondo/Ola4.png" type="Texture" id=3]
[ext_resource path="res://Gfx/Fondo/Ola3.png" type="Texture" id=4]
[ext_resource path="res://Gfx/Fondo/Ola2.png" type="Texture" id=5]
[ext_resource path="res://Gfx/Fondo/Ola1.png" type="Texture" id=6]
[ext_resource path="res://Gfx/Fondo/Burbuja.png" type="Texture" id=7]

[sub_resource type="ColorRamp" id=1]

offsets = FloatArray( 0, 0.0350877, 0.71345, 1 )
colors = ColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="Mar" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Moja2" type="Node2D" parent="."]

[node name="harina mojada" type="Sprite" parent="Moja2"]

visibility/opacity = 0.8
visibility/blend_mode = 2
texture = ExtResource( 2 )
centered = false

[node name="Ola4" type="Node2D" parent="."]

[node name="Ola4" type="Sprite" parent="Ola4"]

texture = ExtResource( 3 )
centered = false

[node name="Ola3" type="Node2D" parent="."]

[node name="Ola3" type="Sprite" parent="Ola3"]

texture = ExtResource( 4 )
centered = false

[node name="Ola2" type="Node2D" parent="."]

[node name="Ola2" type="Sprite" parent="Ola2"]

texture = ExtResource( 5 )
centered = false

[node name="Ola1" type="Node2D" parent="."]

[node name="Ola1" type="Sprite" parent="Ola1"]

texture = ExtResource( 6 )
centered = false

[node name="Burbujas" type="Node2D" parent="."]

[node name="Burbujas" type="Particles2D" parent="Burbujas"]

transform/pos = Vector2( 964.416, 876.267 )
config/amount = 24
config/lifetime = 20.0
config/preprocess = 10.0
config/half_extents = Vector2( 960, 210 )
config/texture = ExtResource( 7 )
params/direction = 0.0
params/spread = 100000.0
params/linear_velocity = 4.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.4
params/initial_angle = 0.0
params/initial_size = 0.12
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/direction = 10000.0
randomness/initial_size = 0.05
color/color_ramp = SubResource( 1 )


